--- a/package.json
+++ b/package.json
@@ -3,15 +3,48 @@
   "version": "0.5.1",
   "description": "Ember loadInitializers is a tiny package to autoload your initializer files in EAK and ember-cli.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
   },
-  "repository": {
+  "scripts": {
+    "build": "ember build",
+    "start": "ember server",
+    "test": "ember try:each"
+  },
+  "repo": {
     "type": "git",
     "url": "git+https://github.com/ember-cli/ember-load-initializers.git"
   },
   "author": "Stefan Penner <stefan.penner@gmail.com>, Mattia Gheda <ghedamat@gmail.com>, Manuel Wiedenmann <manuel@funkensturm.de>, Alex Navasardyan <alex@dockyard.com>",
   "license": "MIT",
+  "devDependencies": {
+    "broccoli-asset-rev": "^2.4.2",
+    "ember-ajax": "^2.0.1",
+    "ember-cli": "2.7.0-beta.6",
+    "ember-cli-app-version": "^1.0.0",
+    "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-htmlbars": "^1.0.3",
+    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
+    "ember-cli-inject-live-reload": "^1.4.0",
+    "ember-cli-jshint": "^1.0.0",
+    "ember-cli-qunit": "^2.0.0",
+    "ember-cli-release": "^0.2.9",
+    "ember-cli-sri": "^2.1.0",
+    "ember-cli-test-loader": "^1.1.0",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-data": "^2.7.0-beta.3",
+    "ember-disable-prototype-extensions": "^1.1.0",
+    "ember-export-application-global": "^1.0.5",
+    "ember-load-initializers": "^0.5.1",
+    "ember-resolver": "^2.0.3",
+    "ember-welcome-page": "^1.0.1",
+    "ember-cli-babel": "^5.1.6",
+    "loader.js": "^4.0.1"
+  },
+  "ember-addon": {
+    "configPath": "tests/dummy/config"
+  },
   "keywords": [
     "ember-addon"
   ],
