--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ember-ajax": "^2.0.1",
     "ember-cli": "2.7.0-beta.6",
     "ember-cli-app-version": "^1.0.0",
+    "ember-cli-babel": "^5.1.6",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
@@ -39,7 +40,6 @@
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
     "ember-welcome-page": "^1.0.1",
-    "ember-cli-babel": "^5.1.6",
     "loader.js": "^4.0.1"
   },
   "ember-addon": {
@@ -51,5 +51,6 @@
   "bugs": {
     "url": "https://github.com/ember-cli/ember-load-initializersder/issues"
   },
-  "homepage": "https://github.com/ember-cli/ember-load-initializers#readme"
+  "homepage": "https://github.com/ember-cli/ember-load-initializers#readme",
+  "repository": "git@github.com:ember-cli/ember-load-initializers.git"
 }
