--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "start": "ember server",
     "test": "ember try:each"
   },
+  "dependencies": {
+    "ember-cli-babel": "^5.1.6"
+  },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
     "ember-ajax": "^2.0.1",
     "ember-cli": "2.7.0-beta.6",
     "ember-cli-app-version": "^1.0.0",
-    "ember-cli-babel": "^5.1.6",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
