--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "type": "git",
     "url": "git+https://github.com/ember-cli/ember-load-initializers.git"
   },
+  "engines": {
+    "node": ">= 4.0"
+  },
   "scripts": {
     "build": "ember build",
     "start": "ember server",
     "test": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^5.1.6"
+    "ember-cli-babel": "^6.0.0-beta.7"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
@@ -40,7 +43,7 @@
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-htmlbars": "^1.0.3",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.4.0-beta.2",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
     "ember-cli-qunit": "^2.0.0",
