--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "ember-data": "^2.17.0",
     "ember-disable-prototype-extensions": "^1.1.2",
     "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
+    "ember-sinon-qunit": "^2.1.0",
     "ember-source": "~2.17.0",
     "eslint-plugin-ember": "^5.0.0",
     "loader.js": "^4.2.3"
