--- a/package.json
+++ b/package.json
@@ -33,19 +33,32 @@
     "lint:js": "eslint .",
     "start": "ember serve",
     "test": "ember test",
-    "test:all": "ember try:each"
+    "test:all": "ember try:each",
+    "prepublishOnly": "ember ts:precompile",
+    "postpublish": "ember ts:clean"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.9.0"
+    "ember-cli-babel": "^7.9.0",
+    "ember-cli-typescript": "^2.0.0"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.7.0",
+    "@types/ember": "^3.0.29",
+    "@types/ember-qunit": "^3.4.6",
+    "@types/ember-resolver": "^5.0.6",
+    "@types/ember-test-helpers": "^1.0.5",
+    "@types/ember-testing-helpers": "^0.0.3",
+    "@types/ember__engine": "^3.0.4",
+    "@types/ember__test-helpers": "^0.7.8",
+    "@types/qunit": "^2.5.4",
+    "@types/rsvp": "^4.0.2",
     "ember-cli": "~3.9.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars": "^3.1.0",
     "ember-cli-htmlbars-inline-precompile": "^2.0.0",
     "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-typescript-blueprints": "^2.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.5.1",
@@ -56,7 +69,8 @@
     "eslint-plugin-ember": "^6.10.0",
     "eslint-plugin-node": "^8.0.0",
     "lerna-changelog": "^0.8.2",
-    "loader.js": "^4.7.0"
+    "loader.js": "^4.7.0",
+    "typescript": "^3.3.3333"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
