--- a/package.json
+++ b/package.json
@@ -65,10 +65,13 @@
     "ember-source-channel-url": "^1.1.0",
     "ember-try": "^1.2.1",
     "eslint": "5",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-ember": "^6.10.0",
     "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "lerna-changelog": "^0.8.2",
     "loader.js": "^4.7.0",
+    "prettier": "^1.18.2",
     "release-it": "^12.2.1",
     "release-it-lerna-changelog": "^1.0.3",
     "typescript": "^3.3.3333"
