--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ addons:
   chrome: stable
 
 cache:
-  directories:
-    - $HOME/.npm
+  yarn: true
 
 env:
   global:
@@ -26,10 +25,15 @@ jobs:
     # runs linting and tests with current locked deps
 
     - stage: "Tests"
+      name: "Linting"
+      node_js: 8
+      script:
+        - yarn lint:js
+
+    - stage: "Tests"
       name: "Tests"
       script:
-        - npm run lint:js
-        - npm test
+        - yarn test
 
     # we recommend new addons test the current and previous LTS
     # as well as latest stable release (bonus points to beta/canary)
@@ -41,10 +45,8 @@ jobs:
     - env: EMBER_TRY_SCENARIO=ember-canary
     - env: EMBER_TRY_SCENARIO=ember-default-with-jquery
 
-before_install:
-  - npm config set spin false
-  - npm install -g npm@4
-  - npm --version
+install:
+  - yarn install --ignore-engines
 
 script:
   - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO
