Pin engine.io subdependency to avoid local test issues on Node 6
Reported upstream in https://github.com/socketio/engine.io/issues/589

--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
     "release-it-lerna-changelog": "^1.0.3",
     "typescript": "^3.6.3"
   },
+  "resolutions": {
+    "**/engine.io": "~3.3.0"
+  },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
   },
