--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: node_js
 node_js:
   # we recommend testing addons with the same minimum supported node version as Ember CLI
   # so that your addon works for all apps
-  - "6"
+  - '12'
 
 addons:
   chrome: stable
@@ -24,32 +24,31 @@ jobs:
   include:
     # runs linting and tests with current locked deps
 
-    - stage: "Tests"
-      name: "Linting"
-      node_js: 8
+    - stage: 'Tests'
+      name: 'Linting'
       script:
-        - yarn lint:js
+        - yarn lint
 
-    - stage: "Tests"
-      name: "Tests"
+    - stage: 'Tests'
+      name: 'Tests'
       script:
-        - yarn test
+        - yarn workspace test-app run test:ember
 
     # we recommend new addons test the current and previous LTS
     # as well as latest stable release (bonus points to beta/canary)
-    - stage: "Additional Tests"
-      env: EMBER_TRY_SCENARIO=ember-lts-2.16
-    - env: EMBER_TRY_SCENARIO=ember-lts-2.18
+    - stage: 'Additional Tests'
+      env: EMBER_TRY_SCENARIO=ember-lts-3.24
+    - env: EMBER_TRY_SCENARIO=ember-lts-3.28
     - env: EMBER_TRY_SCENARIO=ember-release
     - env: EMBER_TRY_SCENARIO=ember-beta
     - env: EMBER_TRY_SCENARIO=ember-canary
-    - env: EMBER_TRY_SCENARIO=ember-default-with-jquery
+    - env: EMBER_TRY_SCENARIO=ember-lts-with-jquery
 
 install:
   - yarn install --ignore-engines
 
 script:
-  - node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO
+  - cd packages/test-app && yarn ember try:one $EMBER_TRY_SCENARIO
 
 deploy:
   provider: npm
