--- a/packages/test-app/.gitignore
+++ b/packages/test-app/.gitignore
@@ -3,13 +3,16 @@
 # compiled output
 /dist/
 /tmp/
-/.eslintcache
 
 # dependencies
-node_modules/
+/bower_components/
+/node_modules/
 
 # misc
+/.env*
+/.pnp*
 /.sass-cache
+/.eslintcache
 /connect.lock
 /coverage/
 /libpeerconnection.log
@@ -18,5 +21,9 @@ node_modules/
 /yarn-error.log
 
 # ember-try
-.node_modules.ember-try/
+/.node_modules.ember-try/
+/bower.json.ember-try
+/npm-shrinkwrap.json.ember-try
 /package.json.ember-try
+/package-lock.json.ember-try
+/yarn.lock.ember-try
