--- a/package.json
+++ b/package.json
@@ -2,17 +2,23 @@
   "name": "ember-load-initializers",
   "version": "2.1.2",
   "description": "A tiny add-on to autoload your initializer files in ember-cli.",
-  "keywords": [
-    "ember-addon"
-  ],
+  "keywords": [],
+  "type": "module",
   "homepage": "https://github.com/ember-cli/ember-load-initializers#readme",
   "bugs": {
     "url": "https://github.com/ember-cli/ember-load-initializers/issues"
   },
+  "exports": {
+    ".": "dist/index.js"
+  },
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ember-cli/ember-load-initializers.git"
   },
+  "files": [
+    "dist"
+  ],
   "license": "MIT",
   "contributors": [
     "Stefan Penner <stefan.penner@gmail.com>",
@@ -20,73 +26,26 @@
     "Manuel Wiedenmann <manuel@funkensturm.de>",
     "Alex Navasardyan <alex@dockyard.com>"
   ],
-  "main": "index.js",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build",
-    "lint:js": "eslint --cache --ext js,ts .",
-    "prepublishOnly": "ember ts:precompile",
-    "postpublish": "ember ts:clean",
-    "start": "ember serve",
-    "test": "ember test",
-    "test:all": "ember try:each"
-  },
-  "dependencies": {
-    "ember-cli-babel": "^7.13.0",
-    "ember-cli-typescript": "^2.0.2"
+    "prepare": "tsc",
+    "start": "tsc --watch"
   },
   "devDependencies": {
-    "@ember/optional-features": "^0.7.0",
-    "@types/ember": "^3.1.1",
-    "@types/ember-qunit": "^3.4.8",
-    "@types/ember-resolver": "^5.0.7",
-    "@types/ember-test-helpers": "^1.0.6",
-    "@types/ember-testing-helpers": "^0.0.4",
-    "@types/ember__engine": "^3.0.4",
-    "@types/ember__test-helpers": "^0.7.8",
-    "@types/qunit": "^2.9.1",
-    "@types/rsvp": "^4.0.3",
-    "@typescript-eslint/eslint-plugin": "^2.8.0",
-    "@typescript-eslint/parser": "^2.9.0",
-    "ember-cli": "~3.9.0",
-    "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-htmlbars": "^5.1.0",
-    "ember-cli-htmlbars-inline-precompile": "^2.0.0",
-    "ember-cli-inject-live-reload": "^2.0.2",
-    "ember-cli-typescript-blueprints": "^3.0.0",
-    "ember-disable-prototype-extensions": "^1.1.3",
-    "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-qunit": "^4.6.0",
-    "ember-resolver": "^8.0.0",
-    "ember-source": "~3.18.1",
-    "ember-source-channel-url": "^1.1.0",
-    "ember-try": "^1.3.0",
-    "eslint": "5",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-ember": "^7.6.0",
-    "eslint-plugin-node": "^9.2.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "lerna-changelog": "^1.0.1",
-    "loader.js": "^4.7.0",
-    "prettier": "^1.18.2",
-    "release-it": "^12.4.1",
-    "release-it-lerna-changelog": "^1.0.3",
-    "typescript": "^3.8.3"
+    "typescript": "^5.6.2",
+    "ember-source": "^5.11.1"
   },
-  "resolutions": {
-    "**/engine.io": "~3.3.0"
+  "peerDependencies": {
+    "ember-source": ">= 5"
   },
   "engines": {
-    "node": "6.* || 8.* || >= 10.*"
+    "node": ">= 18.*"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
-  },
-  "ember-addon": {
-    "configPath": "tests/dummy/config"
   },
   "release-it": {
     "plugins": {
