--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     "start": "tsc --watch"
   },
   "devDependencies": {
-    "typescript": "^5.6.2",
-    "ember-source": "^5.11.1"
+    "ember-source": "^5.11.1",
+    "lerna-changelog": "^1.0.1",
+    "release-it-lerna-changelog": "^1.0.3",
+    "release-it": "^12.4.1",
+    "typescript": "^5.6.2"
   },
   "peerDependencies": {
     "ember-source": ">= 5"
