--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
       "default": "./dist/index.js"
     }
   },
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ember-cli/ember-load-initializers.git"
